--- a/09-georefereerimine.Rmd
+++ b/09-georefereerimine.Rmd
@@ -2,9 +2,9 @@
 
 Georefereerimine on kaartide või ka aerofotode ühendamine geograafilise koordinaatsüsteemiga. Tänapäeval tehakse seda peamiselt digitaalselt. Võimalik on ka teistes koordinaatsüsteemides või üldse kohalikus (sisemises) koordinaatsüsteemis kaarte siduda meie kasutatava koordinaatsüsteemiga. Projektsioonidest ja koordinaatsüsteemidest oli lähemalt juttu kaardirakenduste praktikumis.
 
-Georefereerimiseks tuleb märkida samad kohad võimalikult täpselt georefereeritaval kaardil või fotol ja (tänapäevasel) kindlas koortinaatsüsteemis oleval aluskaardil. Georefereerimise tulemusel luuakse rasterkujutisest uus GeoTiff fail või lisatakse olemasolevale failile [*world file*](https://en.wikipedia.org/wiki/World_file), milles on defineeritud rastri asukoht, mõõtkava ja pöördenurk. 
+Georefereerimiseks tuleb märkida samad kohad võimalikult täpselt georefereeritaval kaardil või fotol ja (tänapäevasel) kindlas koordinaatsüsteemis oleval aluskaardil. Georefereerimise tulemusel luuakse rasterkujutisest uus *GeoTiff* fail või lisatakse olemasolevale failile nn [*world file*](https://en.wikipedia.org/wiki/World_file), milles on defineeritud rastri asukoht, mõõtkava ja pöördenurk. 
 
-Praktikumi käigus otsime ajaloolised kaardid, mida soovime GISis kasutada, georefeerime need, lõikame vajalikku suurusesse ning digiteerime neilt huvipakkuvad objektid. 
+Praktikumi käigus otsime välja ajaloolised kaardid, mida soovime GISis kasutada, georefeerime need, lõikame vajalikku suurusesse ning digiteerime neilt huvipakkuvad objektid. 
 
 ## Kaartide otsimine ja allalaadimine
 
@@ -14,55 +14,55 @@ Otsi Rahvusarhiivi kaartide infosüsteemist [ra.ee/kaardid](http://www.ra.ee/kaa
 - Jackowal Hofs Byar uti Jegelecht Sochn belägne, EAA.1.2.C-III-8, 1688. Jägala mõisa külad Jõelähtme kihelkonnas.
 
 
-```{r dorpat1870, echo=F, fig.show='hold', fig.align='center', out.width= "80%", fig.cap="Tartu kaart 1870. a"}
-knitr::include_graphics(here::here("imgs", "tartu_1870.JPG"))
+```{r dorpat1870, echo=F, fig.show='hold', fig.align='center', out.width= "70%", fig.cap="Tartu kaart 1870. a"}
+knitr::include_graphics(here::here("imgs", "tartu_1870.jpg"))
 ```
 
-```{r jaggowal1688, echo=F, fig.show='hold', fig.align='center', out.width= "80%", fig.cap="Jägala mõisa kaart 1688. a"}
+```{r jaggowal1688, echo=F, fig.show='hold', fig.align='center', out.width= "70%", fig.cap="Jägala mõisa kaart 1688. a"}
 knitr::include_graphics(here::here("imgs", "jaggowal_1688.jpg"))
 ```
 
-Võid kasutada samu või otsida muud sarnased kaardid. Laadi kaardid alla ning tõstke need enda arvutis kursuse kaustas andmete või kaartide kausta. 
+Võid kasutada samu või otsida muud sarnased kaardid. Laadi kaardid alla ning tõsta need enda arvutis kursuse kaustas andmete või kaartide kausta. 
 
 ## Harjutus 1
 
-Harjutuse eesmärk läbi georefereerimise peamised sammud Tartu 19. saj kaardi abil. 
+Harjutuse eesmärk on teha läbi georefereerimise peamised sammud Tartu 19. saj kaardi abil. 
 
-Ava QGIS. QGISis on georefereerimise tööriist *Georeferencer* leitav ülevalt menüüst *Raster* alt. Juhul, kui seal valikut *Georeferencer* ei ole (näiteks kui kasutad vanemat QGISi versiooni), siis tuleb see aktiveerida. Selleks *Plugins -> Manage and Install Plugins* -> otsingusse kirjuta *Georeferencer* -> tee linnuke *Georefencer GDAL Plugin* ette ja sulge see aken. Nüüd on *Raster* menüü all näha *Georeferencer*. Tööriista sisselülitamine on ühekordne tegevus. Järgmisel korral QGISi avades on see *Raster* menüü all juba olemas. Selle tööriista kohta saab täpsemalt lugeda [QGIS 3.16 juhendist](https://docs.qgis.org/3.16/en/docs/user_manual/working_with_raster/georeferencer.html).
+Ava QGIS. QGISis on georefereerimise tööriist *Georeferencer* leitav ülevalt menüüst *Raster* alt. Juhul, kui seal valikut *Georeferencer* ei ole (näiteks kui kasutad vanemat QGISi versiooni), siis tuleb see aktiveerida. Selleks vali *Plugins -> Manage and Install Plugins* -> otsingusse kirjuta *Georeferencer* -> tee linnuke *Georefencer GDAL Plugin* ette ja sulge see aken. Nüüd on *Raster* menüü all näha *Georeferencer*. Tööriista sisselülitamine on ühekordne tegevus. Järgmisel korral QGISi avades on see *Raster* menüü all juba olemas. Selle tööriista kohta saab täpsemalt lugeda [QGIS 3.16 juhendist](https://docs.qgis.org/3.16/en/docs/user_manual/working_with_raster/georeferencer.html).
 
-```{r georefenable, echo=F, fig.show='hold', fig.align='center', out.width= "90%", fig.cap="Georefereerija sisselülitamine vanemates QGIS versioonides"}
+```{r georefenable, echo=F, fig.show='hold', fig.align='center', out.width= "70%", fig.cap="Georefereerija sisselülitamine vanemates QGISi versioonides"}
 knitr::include_graphics(here::here("imgs", "georeferences_enabling.gif"))
 ```
 
-Ava *Georeferencer* ning ava selles 19. saj Tartu kaart. *File* -> *Open Raster*. Selles aknas liikumine on on samamoodi nagu tavalisel kaardiaknal. Saab suumida hiire rullikuga või *ctrl* all hoides ning liikuda nooltega ja hiirega kui valitud on käekujuline *Pan* ikoon. Vaadake kaardil ringi, kas tunnete ära mõningad tuntud kohad. 
+Ava *Georeferencer* ning ava selles 19. saj Tartu kaart. *File* -> *Open Raster*. Selles aknas liikumine käib samamoodi nagu tavalises kaardiaknas. Saab suumida hiire rullikuga või *Ctrl*-nuppu all hoides ning liikuda nooltega ja hiirega, kui valitud on käekujuline *Pan* ikoon. Vaata kaardil ringi. Kas tunned ära mõningad tuntud kohad? 
 
-Nüüd on vaja aluskaarti, mille pealt leida ühised punktid ajaloolise kaardiga. Selleks ava Maa-ameti WMS teenusest Hybriidkaart, Põhikaart ja Ortofoto. Hübriidkaardi kasutamiseks tuleb luua ühenduse aadressiga *https://kaart.maaamet.ee/wms/ajalooline*. Ortofoto kasutamiseks tuleb luua ühenduse aadressiga *https://kaart.maaamet.ee/wms/fotokaart* ning põhikaardi jaoks *https://kaart.maaamet.ee/wms/alus*. Kui need ühendus pole teil varem seadistatud, siis tehke seda. WMS ühenduse loomisest on täpsemalt praktikumides [Sissejuhatus QGISi][Aluskaardid] ja [Sissejuhatus QGISi 2][Kihi ja andmete loomine].
+Nüüd on vaja aluskaarti, mille pealt leida ühised punktid ajaloolise kaardiga. Selleks ava Maa-ameti WMS-teenusest *Hybriidkaart*, *Põhikaart* ja *Ortofoto*. Hübriidkaardi kasutamiseks tuleb luua ühendus aadressiga *https://kaart.maaamet.ee/wms/ajalooline*. Ortofoto kasutamiseks tuleb luua ühendus aadressiga *https://kaart.maaamet.ee/wms/fotokaart* ning põhikaardi jaoks aadressiga *https://kaart.maaamet.ee/wms/alus*. Kui need ühendused pole teil varem seadistatud, siis tehke seda. WMS-ühenduse loomisest on täpsemalt juttu praktikumides [Sissejuhatus QGISi][Aluskaardid] ja [Sissejuhatus QGISi 2][Kihi ja andmete loomine].
 
-Lisaks võite ajalooliste kaartide WMS teenusest võtta ka üheverstase kaardi, millega on hea georefereerimisel tänapäevast olukorda kõrvutada. Pidage meeles, et ka üheverstane kaart on georefereeritud ning seetõttu võib esineda ebatäpsuseid.
+Lisaks võite ajalooliste kaartide WMS-teenusest võtta ka üheverstase kaardi, millega on hea georefereerimisel tänapäevast olukorda kõrvutada. Pidage meeles, et ka üheverstane kaart on georefereeritud ning seetõttu võib esineda ebatäpsuseid.
 
-Märgi punktid ajaloolisel kaardil ja tänapäevasel aluskaardil. Võtke ette jälle *Georeferencer* aken. Georefereerija aknas *Edit* -> *Add point* ja kliki mõlemalt kaardil hästi tuvastataval objektil. Näiteks TÜ peahoone, raekoda, kaarsild, tähetorn, Jaani kirik jms. Seejärel vali *From map canvas* ning kliki tänapäevasel aluskaardil samas kohas. 
+Märgi punktid ajaloolisel kaardil ja tänapäevasel aluskaardil. Võta ette jälle *Georeferencer* aken. Georefereerija aknas vali *Edit* -> *Add point* ja kliki kaardil hästi tuvastataval objektil. Näiteks TÜ peahoone, raekoda, kaarsild, tähetorn, Jaani kirik jms. Seejärel vali *From map canvas* ning kliki tänapäevasel aluskaardil samas kohas. 
 
-```{r georef1, echo=F, fig.show='hold', fig.align='center', out.width= "100%", fig.cap="Sama asukoha märkimine"}
+```{r georef1, echo=F, fig.show='hold', fig.align='center', out.width= "70%", fig.cap="Sama asukoha märkimine"}
 knitr::include_graphics(here::here("imgs", "georeferencing.gif"))
 ```
 
-Märgi sama moodi veel neli kuni kümme punkti kaardil. Võimalusel aseta punktid kaardil võimalikult laiali. Nii saab täpsema tulemuse. See järel tuleb valida georefereerimise sätted. Georefeerija aknas kliki kollasel hammasrattal ja vaata, et sätted oleks nii nagu siinsel pildil.
+Märgi samamoodi veel neli kuni kümme punkti kaardil. Võimalusel aseta punktid kaardil võimalikult laiali. Nii saab täpsema tulemuse. Seejärel tuleb valida georefereerimise sätted. Georefeerija aknas kliki kollasel hammasrattal ja vaata, et sätted oleks nii nagu siinsel pildil.
 
-```{r georefsettings, echo=F, fig.show='hold', fig.align='center', out.width= "50%", fig.cap="Georefereerimise sätted"}
+```{r georefsettings, echo=F, fig.show='hold', fig.align='center', out.width= "40%", fig.cap="Georefereerimise sätted"}
 knitr::include_graphics(here::here("imgs", "georef_settings.PNG"))
 ```
 
-Vajuta rohelisel noolekesel *Start Georeferencing*. Nüüd ilmub georefereeritud kaart QGISi peaaknas. Vaata, kui hästi tänapäevaga koordinaatsüsteemiga sidumine õnnestus. Kui kaart on väga paigast ära, siis lisa rohkem punkte või muuda transformatsiooni tüüpi. Vastavatest algoritmidest saab täpsemalt lugeda *Georeferencer* [juhendist](https://docs.qgis.org/3.16/en/docs/user_manual/working_with_raster/georeferencer.html#available-transformation-algorithms).
+Vajuta rohelisel noolekesel *Start Georeferencing*. Nüüd ilmub georefereeritud kaart QGISi peaaknas (juhul, kui sätetes oli tehtud linnuke valiku *Load in QGIS when done* ette). Vaata, kui hästi tänapäevase koordinaatsüsteemiga sidumine õnnestus. Kui kaart on väga paigast ära, siis lisa rohkem punkte või muuda transformatsiooni tüüpi. Vastavatest algoritmidest saab täpsemalt lugeda tööriista *Georeferencer* [juhendist](https://docs.qgis.org/3.16/en/docs/user_manual/working_with_raster/georeferencer.html#available-transformation-algorithms).
 
 
-```{r georefvalmis, echo=F, fig.show='hold', fig.align='center', out.width= "100%", fig.cap="Georefereeritud Tartu kaart hübriidkaardi ja ortofoto taustal"}
+```{r georefvalmis, echo=F, fig.show='hold', fig.align='center', out.width= "70%", fig.cap="Georefereeritud Tartu kaart hübriidkaardi ja ortofoto taustal"}
 knitr::include_graphics(here::here("imgs", "georef_valmis.PNG"))
 ```
 
 
 ### Lõikamine 
 
-Lõika georefereeritud kaardist välja ainult vanalinna osa. Selleks *Raster → Extraction → Clip raster by extent*. Vaata, et *Input layer* oleks georefereeritud kaart ning *Clipping extent* juures kliki sirvimise ikoonil ja vali *Draw on canvas* ning joonista peaaknas nelinurk, mis katab suurema osa vanalinnast. *Clipped extent* juures kliki sirvimise ikoonil ja vali kursuse kaust ning failile arusaadav nimi. Kliki *Run*. Nüüd on lõigatud kaart peaaknas näha. Sellist lõikamist saab teha ka vektorkihi abil, aga sellest järgmistel kordadel. 
+Lõika georefereeritud kaardist välja ainult vanalinna osa. Selleks vali *Raster → Extraction → Clip raster by extent*. Vaata, et *Input layer* oleks georefereeritud kaart ning *Clipping extent* juures kliki sirvimise ikoonil ja vali *Draw on canvas* ning joonista peaaknas nelinurk, mis katab suurema osa vanalinnast. *Clipped extent* juures kliki sirvimise ikoonil ja vali kursuse kaust ning failile arusaadav nimi. Kliki *Run*. Nüüd on lõigatud kaart peaaknas näha. Sellist lõikamist saab teha ka vektorkihi abil, aga sellest järgmistel kordadel. 
 
 ## Harjutus 2
 
@@ -72,19 +72,19 @@ Georefereeri Jägala mõisa külade 17. sajandi kaart, kasutades samu aluskaarte
 
 ### Digiteerimine 
 
-Loo tühi **ala** kiht *Layer → Create Layer → New Geopackage Layer* ja pane selle nimeks nt *koila_maakasutus*. Lisa kihi atribuutide hulka ka teksti (*string*) tulp *tyyp*. 
+Loo tühi **ala** (*Polygon*) kiht *Layer → Create Layer → New Geopackage Layer* ja pane selle nimeks nt *koila_maakasutus*. Lisa kihi atribuutide hulka ka teksti (*string*) tulp *tyyp*. 
 
-```{r koila_maakasutus, echo=F, fig.show='hold', fig.align='center', out.width= "60%", fig.cap="Maakasutuse digiteerimise kihi tegemine"}
+```{r koila_maakasutus, echo=F, fig.show='hold', fig.align='center', out.width= "40%", fig.cap="Maakasutuse digiteerimise kihi tegemine"}
 knitr::include_graphics(here::here("imgs", "9_koila_maakasutus.png"))
 ```
 
-Digiteeri georefereeritud 17. saj kaardilt Koila küla põllud ja heinamaad. Iga märgitud ala juurde kirjuta, kas see on *põld* või *heinamaa*. Digiteerimisest ja kihtide loomisest on täpsemalt juttu praktikumis [Sissejuhatus QGISi 2][Kihi ja andmete loomine]. Kaardi tingmärkide tuvastamisel on abiks Rahvusarhiivi [leppemärkide juhend](http://www.ra.ee/kaardid/index.php/et/site/page?view=symbols). Koila küla põllumaade tuvastamisel vaadake ajaloolise kaardi vasakul all nurgas olevat legendi. Koila küla on tähistatud *B* tähega. Kuna põllu- ja heinamaad piirnevad üksteisega, siis on kasulik aktiveerida kihtide külge haakumine ehk *snapping*. Selleks *File → Snapping options →* kliki punasel magneti ikoonil. Nüüd haakub kursor kihi läheduses automaatselt selle nurgapunktide ja servade külge.
+Digiteeri georefereeritud 17. saj kaardilt Koila küla põllud ja heinamaad. Iga märgitud ala juurde kirjuta, kas see on *põld* või *heinamaa*. Digiteerimisest ja kihtide loomisest on täpsemalt juttu praktikumis [Sissejuhatus QGISi 2][Kihi ja andmete loomine]. Kaardi tingmärkide tuvastamisel on abiks Rahvusarhiivi [leppemärkide juhend](http://www.ra.ee/kaardid/index.php/et/site/page?view=symbols). Koila küla põllumaade tuvastamisel vaadake ajaloolise kaardi vasakul all nurgas olevat legendi. Koila küla on tähistatud *B* tähega. Kuna põllu- ja heinamaad piirnevad üksteisega, siis on kasulik aktiveerida kihtide külge haakumine ehk *snapping*. Selleks vali *Project → Snapping options →* kliki punasel magneti ikoonil. Nüüd haakub kursor kihi läheduses automaatselt selle käänupunktide külge.
 
 
 
-Arvuta igale märgitud alale selle pindala. Selleks tuleb atribuuttabelisse luua pindala tulp ja sisestada funktsioon selle arvutamiseks. Ava *Attribute table → Open Field Calculator*. Linnuke *Create new field* ette ja tulba nimeks *pindala_ha*. *Expression* lahtrisse kopeeri kood *round(\$area / 10000, 2)*. See arvutab iga ala pindala ruutmeetrites (*\$area*), jagab selle 10000 ehk teisendab hektariteks ja lõputuseks ümardab kahe komakohani. 
+Arvuta igale märgitud alale selle pindala. Selleks tuleb atribuuttabelisse luua pindala tulp ja sisestada funktsioon selle arvutamiseks. Ava *Attribute table → Open Field Calculator*. Tee linnuke *Create new field* ette ja tulba nimeks pane *pindala_ha*. *Expression* lahtrisse kopeeri kood *round(\$area / 10000, 2)*. See arvutab iga ala pindala ruutmeetrites (*\$area*), jagab selle 10 000-ga ehk teisendab hektariteks ja lõputuseks ümardab kahe komakohani. 
 
-```{r koila_pindala, echo=F, fig.show='hold', fig.align='center', out.width= "60%", fig.cap="Pindala arvutamiseks tulba loomine ja funktsioon"}
+```{r koila_pindala, echo=F, fig.show='hold', fig.align='center', out.width= "60%", fig.cap="Pindala arvutamiseks tulba loomine ja kasutatud funktsioon"}
 knitr::include_graphics(here::here("imgs", "9_pindala_arvutamine.png"))
 ```
 
@@ -105,4 +105,4 @@ Georefereerige käsitsi tehtud kaardid Tartu kesklinnast. Katsetage erinevate me
 
 ## Järgmisel korral
 
-Neljapäevases praktikumis vaatame, kuidas saab ruumiandmete töötamisel kasutada avaldisi ja päringuid.
+Neljapäevases praktikumis vaatame, kuidas saab ruumiandmetega töötamisel kasutada avaldisi ja päringuid.
