praktikum 12. värvid sildid eksitamine

--- a/kirjandus.bib
+++ b/kirjandus.bib
@@ -12,6 +12,64 @@ url = {http://doi.wiley.com/10.1111/tgis.12148},
 volume = {19},
 year = {2015}
 }
+@article{Thyng2020,
+author = {Thyng, Kristen M.},
+doi = {10.1109/MCSE.2020.3006946},
+issn = {1558366X},
+journal = {Computing in Science and Engineering},
+month = {sep},
+number = {5},
+pages = {96--102},
+publisher = {IEEE Computer Society},
+title = {{The Importance of Colormaps}},
+volume = {22},
+year = {2020}
+}
+@book{Cairo2019,
+author = {Cairo, Alberto},
+isbn = {9780393358421},
+keywords = {GISi kursus,Visualisation},
+mendeley-tags = {GISi kursus,Visualisation},
+pages = {256},
+publisher = {W. W. Norton & Company},
+title = {{How Charts Lie. Getting Smarter about Visual Information}},
+year = {2019}
+}
+@book{Graser2020,
+author = {Graser, Anita and Published, Gretchen N. Peterson},
+file = {:C\:/literature/Graser & Peterson - 2020 - QGIS Map Design.pdf:pdf},
+isbn = {9780998547749},
+keywords = {GIS,GISi kursus,QGIS},
+mendeley-tags = {GIS,GISi kursus,QGIS},
+publisher = {Locate Press LLC},
+title = {{QGIS Map Design}},
+year = {2020}
+}
+@book{Graser2017,
+author = {Graser, Anita and Mearns, Ben and Mandel, Alex and Ferrerp, V{\'{i}}ctor Olaya and Bruy, Alexander},
+file = {:C\:/literature/Graser et al - 2017 - QGIS Becoming a GIS Power User.pdf:pdf},
+isbn = {978-1-78829-972-5},
+pages = {797},
+title = {{QGIS: Becoming a GIS Power User}},
+year = {2017}
+}
+
+@article{Crameri2020,
+author = {Crameri, Fabio and Shephard, Grace E and Heron, Philip J},
+doi = {10.1038/s41467-020-19160-7},
+file = {:C\:/literature/Crameri et al. - 2020 - The misuse of colour in science communication.pdf:pdf},
+issn = {2041-1723},
+journal = {Nature Communications},
+keywords = {GISi kursus},
+mendeley-tags = {GISi kursus},
+number = {1},
+pages = {5444},
+title = {{The misuse of colour in science communication}},
+url = {https://doi.org/10.1038/s41467-020-19160-7},
+volume = {11},
+year = {2020}
+}
+
 @article{Kimber2016,
 author = {Kimber, Andres},
 journal = {Tutulus: Eesti arheoloogia aastakiri},
